--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@ O diferencial da Delícias da Maria está no cuidado com cada detalhe, desde o p
 A confeitaria é um espaço acolhedor, ideal para um café da tarde ou para encomendar delícias que tornam qualquer ocasião ainda mais especial.
 
  </body>p>
-
+ <div class="produtos">
+    <h1>Nossos Produtos</h1>
+    <div class="grid">
+        <div class="item">
+            <h2>Nome do Produto</h2>
+            <img class="imagem-produto" src="img/teste.jpeg">
+            <p>Tamanho: </p>
+            <p>Preço: R$</p>
+        </div>
+        <div class="item">
+            <h2>Nome do Produto</h2>
+            <img class="imagem-produto" src="img/teste.jpeg">
+            <p>Tamanho: </p>
+            <p>Preço: R$</p>
+        </div>
+        <div class="item">
+            <h2>Nome do Produto</h2>
+            <img class="imagem-produto" src="img/teste.jpeg">
+            <p>Tamanho: </p>
+            <p>Preço: R$</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
