--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>delicias da maria</h1>
-    <h2>peaços que caem do céu</h2>
+    <h2>pedaços que caem do céu</h2>
     <p>bolo,doces e salgados para festas
         A Confeitaria Delícias da Maria é um verdadeiro paraíso para os amantes de bolos, doces e salgados. Com receitas caseiras e um toque de carinho em cada detalhe, o local oferece uma variedade irresistível de sabores que agradam todos os paladares.
 
