--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ A confeitaria é um espaço acolhedor, ideal para um café da tarde ou para enco
     <h1>Nossos Produtos</h1>
     <div class="grid">
         <div class="item">
-            <h2>Nome do Produto</h2>
-            <img class="imagem-produto" src="img/teste.jpeg">
+            <h2>bolo de Morango</h2>
+            <img class="imagem-produto" src="morango.jpg">
             <p>Tamanho: </p>
             <p>Preço: R$</p>
         </div>
