--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ A confeitaria é um espaço acolhedor, ideal para um café da tarde ou para enco
         <div class="item">
             <h2>bolo de Morango</h2>
             <img class="imagem-produto" src="morango.jpg">
-            <p>Tamanho: </p>
-            <p>Preço: R$</p>
+            <p>Tamanho:1,5kg </p>
+            <p>Preço:145,00 R$</p>
         </div>
         <div class="item">
-            <h2>Nome do Produto</h2>
-            <img class="imagem-produto" src="img/teste.jpeg">
+            <h2>Brigadeiro Gourmet</h2>
+            <img class="imagem-produto" src="images.jpeg">
             <p>Tamanho: </p>
             <p>Preço: R$</p>
         </div>
