--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ A confeitaria é um espaço acolhedor, ideal para um café da tarde ou para enco
         </div>
         <div class="item">
             <h2>Brigadeiro Gourmet</h2>
-            <img class="imagem-produto" src="images.jpeg">
+            <img class="imagem-produto" src="imges.jpeg">
             <p>Tamanho: </p>
             <p>Preço: R$</p>
         </div>
