--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@ A confeitaria é um espaço acolhedor, ideal para um café da tarde ou para enco
             <h2>bolo de Morango</h2>
             <img class="imagem-produto" src="morango.jpg">
             <p>Tamanho:1,5kg </p>
-            <p>Preço:145,00 R$</p>
+            <p>Preço:R$145,00</p>
         </div>
         <div class="item">
             <h2>Brigadeiro Gourmet</h2>
-            <img class="imagem-produto" src="imges.jpeg">
-            <p>Tamanho: </p>
-            <p>Preço: R$</p>
+            <img class="imagem-produto" src="cbc-chocolate-768x1024.jpg">
+            <p>Tamanho:médio </p>
+            <p>Preço:R$ 10,00</p>
         </div>
         <div class="item">
-            <h2>Nome do Produto</h2>
-            <img class="imagem-produto" src="img/teste.jpeg">
-            <p>Tamanho: </p>
-            <p>Preço: R$</p>
+            <h2>macarron</h2>
+            <img class="imagem-produto" src="macrron">
+            </p>Tamanho:pequeno></p>
+            <p>Preço:R$ 10,00</p>
         </div>
     </div>
 </div>
