--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ A confeitaria é um espaço acolhedor, ideal para um café da tarde ou para enco
         </div>
         <div class="item">
             <h2>macarron</h2>
-            <img class="imagem-produto" src="macarron">
-            </p>Tamanho:pequeno></p>
+            <img class="imagem-produto" src="caia e sortidos.jpg">
+            </p>Tamanho:pequeno</p>
             <p>Preço:R$ 10,00</p>
         </div>
     </div>
